Minor fix about dialog scrollbar

--- a/css/common.css
+++ b/css/common.css
@@ -123,7 +123,7 @@ body {
     display: initial;
 }
 
-#keyboard-modal {
+#keyboard-modal, #alert-modal {
     overflow-y: hidden;
 }
 
